kubernetes/chrome.yaml
apiVersion: v1
kind: Pod
metadata:
  name: chrome-node-1
spec:
  volumes:
    - name: dshm
      emptyDir:
        medium: Memory
  restartPolicy: Never
  containers:
    - name: selenium-node-chrome
      image: selenium/node-chrome:4

      ports:
        - containerPort: 5555
      volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      resources:
        limits:
          memory: "550Mi"
          cpu: "500m"
        requests:
          memory: "350Mi"
          cpu: "100m"

---
apiVersion: v1
kind: Pod
metadata:
  name: chrome-node-2
spec:
  volumes:
    - name: dshm
      emptyDir:
        medium: Memory
  restartPolicy: Never
  containers:
    - name: selenium-node-chrome
      image: selenium/node-chrome:4
      ports:
        - containerPort: 5555
      volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      resources:
        limits:
          memory: "550Mi"
          cpu: "500m"
        requests:
          memory: "350Mi"
          cpu: "100m"
